@@ -1,1 +1,1 @@
-extern void get_basic_balance_motor_speed(int16_t * motor_speed, float angle, float angle_old, int16_t m1, int16_t m2);
+extern void get_basic_balance_motor_speed(int16_t *, float, float, int16_t, int16_t);
