@@ -1,13 +1,13 @@
-#define DEBUG     1
+#include <stdio.h>
 
+// Arduino libraries
 #include "I2Cdev.h"
 #include "MPU6050_6Axis_MotionApps20.h"
 #include "Wire.h"
 #include "TimerOne.h"
-#include "printf.h"
-#include <stdio.h>
 
 // Local includes
+#include "printf.h"
 #include "pot_motor_speed.h"
 #include "pid_motor_speed.h"
 #include "basic_balance_motor_speed.h"
@@ -15,6 +15,8 @@
 // ================================================================
 // ===                        CONSTANTS                         ===
 // ================================================================
+#define DEBUG     1
+
 #define MOTOR_1_STEP 8
 #define MOTOR_1_DIR 9
 
@@ -29,7 +31,8 @@
 // ================================================================
 int16_t motor_1_speed;
 int16_t motor_2_speed;
-int16_t counter_motor;
+int16_t speed_period_m1;
+int16_t speed_period_m2;
 uint8_t running_mode;
 
 // MPU
@@ -83,41 +86,52 @@ void setup_mpu(){
   // Yaw stablelizing
 
   prints("Waiting 20s for calibration\n");
-  delay(20000);
+  delay(1000);
 
 }
 // ================================================================
 // ===                      Motors Functions                    ===
 // ================================================================
+
+// sets the motor direction pin accordingly to the motor speed
 void setMotorDirection(int pin, int motorSpeed) {
   digitalWrite(pin, motorSpeed > 0 ? HIGH : LOW);
 }
 
+// pulse the motor one step
 void step(int motor){
   digitalWrite(motor, HIGH);
   delayMicroseconds(1);
   digitalWrite(motor, LOW);
 }
 
+
+
+// interrupt function that is called every 25hkz (once every 40 microseconds)
 void step_motors() {
-  counter_motor++;
+  static int16_t counter_m1 = 0;
+  static int16_t counter_m2 = 0;
 
-  int speed = -0.017*abs(motor_1_speed) + 9.5;
+  if (!speed_period_m1 && !speed_period_m2) return;
 
-  if (counter_motor >= speed) {
-    counter_motor = 0;
+  counter_m1++;
+  counter_m2++;
+
+  if (counter_m1 >= speed_period_m1) {
+    counter_m1 = 0;
     step(MOTOR_1_STEP);
+  }
+
+  if (counter_m2 >= speed_period_m2) {
+    counter_m2 = 0;
     step(MOTOR_2_STEP);
   }
 }
-
-// ======================================================
 // Modules functions
-// ========================
-void (*function[24])(int16_t *, float, float, int16_t, int16_t);
-uint16_t module_counter;
+static void (*function[24])(int16_t *, float, float, int16_t, int16_t);
+static uint16_t module_counter;
 
-void register_module(void (*func)(int16_t *, float, float, int16_t, int16_t)) {
+static void register_module(void (*func)(int16_t *, float, float, int16_t, int16_t)) {
   function[module_counter++] = func;
 }
 
@@ -136,13 +150,15 @@ void setup() {
   setup_mpu();
 
   // Set timer one frequency and call back function for interruption
-  Timer1.initialize(60); // 25Khz
+  Timer1.initialize(40); // 25Khz
   Timer1.attachInterrupt(step_motors);
 
+  // register existing modules
   register_module(get_pid_motor_speed);
   register_module(get_pot_motor_speed);
   register_module(get_basic_balance_motor_speed);
 
+  // load desired module
   prints("Select mode [0-%d]\n", module_counter-1);
   while(!Serial.available());
   running_mode = Serial.read() - '0';
@@ -154,24 +170,37 @@ float angle_adjusted;
 
 // Main loop
 void loop() {
-  int16_t motor_speed[2];
-
   fifoCount =  mpu.getFIFOCount();
 
   if (fifoCount > 18) {
     float angle_adjusted_old = angle_adjusted;
     angle_adjusted = dmpGetPhi();
-    // if we are in an unrecoverable position
+    // if we are in an recoverable position
     if (angle_adjusted > -15 && angle_adjusted < 15) {
-      (*function[running_mode])(motor_speed, angle_adjusted, angle_adjusted_old, motor_1_speed, motor_2_speed);
-      motor_1_speed = motor_speed[0];
-      motor_2_speed = motor_speed[1];
-    }
+      int16_t motor_accel[2];
+      // call the running module 
+      (*function[running_mode])(motor_accel, angle_adjusted, angle_adjusted_old, motor_1_speed, motor_2_speed);
 
+      // we integrate the acceleration
+      motor_1_speed += motor_accel[0];
+      motor_2_speed -= motor_accel[1];
+
+      //constrain motor speed
+      motor_1_speed = constrain(motor_1_speed, -500, 500);
+      motor_2_speed = constrain(motor_2_speed, -500, 500);
+
+      // calculate motor period by the function of f(x)=-0.017*x+9.5
+      speed_period_m1 = -0.017*abs(motor_1_speed) + 9.5;
+      speed_period_m2 = -0.017*abs(motor_2_speed) + 9.5;
+    } else {
+      // if it is an angle we can't recover we gg and stop the motors
+      motor_1_speed = motor_2_speed = 0;
+      speed_period_m1 = speed_period_m2 = 0;
+    }
   }
 
 #if DEBUG
-  //prints("M1: %d M2: %d\n", motor_1_speed, motor_2_speed);
+  //  prints("M1: %d M2: %d\n", motor_1_speed, motor_2_speed);
 #endif
 
   setMotorDirection(MOTOR_1_DIR, motor_1_speed);
