@@ -9,23 +9,17 @@
 // ===                        CONSTANTS                         ===
 // ================================================================
 #define POTENT 3
-int32_t timer = millis();
-int32_t old_timer;
+int timer, old_timer;
 
-void get_pot_motor_speed(int16_t * motor_speed, float angle, float angle_old, int16_t m1, int16_t m2) {
-
-  int val = map(analogRead(POTENT), 0, 1020, -500, 500);
-
+void get_pot_motor_speed(int16_t * motor_accel, float angle, float angle_old, int16_t m1, int16_t m2) {
+  int16_t val = map(analogRead(POTENT), 0, 1020, -15, 15);
 #if DEBUG
+  timer = millis();
   if (timer-old_timer > 1000) {
-    noInterrupts();
-    prints("Potentiometer speed value: %d\n", val);
-    interrupts();
+    prints("Potentiometer accel value: %d\n", val);
     old_timer = timer;
   }
-  timer = millis();
 #endif
-
-  motor_speed[0] = val;
-  motor_speed[1] = -val;
+  motor_accel[0] = val;
+  motor_accel[1] = val;
 }
